--- a/consul/Dockerfile
+++ b/consul/Dockerfile
@@ -1,5 +1,5 @@
-FROM ubuntu
-MAINTAINER Fawad Halim <fawad@fawad.net>
+FROM busybox
+MAINTAINER Brandon Philips <brandon@ifup.org>
 
 RUN apt-get -y install unzip
 ADD https://dl.bintray.com/mitchellh/consul/0.2.0_linux_amd64.zip /tmp/consul.zip
